# starfishOA

pilottery/: pilottert_sql.txt  pilottery2.sql
pilottery/trunkdev/db/: gen_cr.bat
pilottery/trunkdev/db/DB_Work/: clean-user.sql  建立只读用户.sql  数据补刷.sql
pilottery/trunkdev/db/run_scripts/: 00-tablespace.sql  01-Create-User.sql  02-Create-Dir.sql
pilottery/trunkdev/db/升级/: run_script.sql  导入旧票中奖明细.sql  旧票奖符.txt
pilottery/trunkdev/doc/02Requirement/: ~$票管理系统需求分析说明书V1.5.docx  即开票监控管理平台需求说明书V1.2.docx  即开票移动终端管理平台需求说明书1.0.doc  即开票移动终端（市场）需求说明书1.3.doc  即开票管理系统需求分析说明书V1.3.docx  即开票管理系统需求分析说明书V1.4.docx  即开票管理系统需求分析说明书V1.5.docx  即开票管理系统需求分析说明书V1.6.docx  即开票需求变更1115.docx
pilottery/trunkdev/doc/03ProjectPlan/: pilottery-v1.mpp  pilottery-v2.mpp
pilottery/trunkdev/doc/04SystemDesign/: HOST与OMS资金接口文档_V0.0.1.doc  KPW_数据库设计说明书-1.0.1.docx  java_web开发规范.docx  ~$NCP接口_1.2.0.doc  ~$W_数据库设计说明书-1.0.1.docx  ~$W_数据库设计说明书-2.0.docx  移动即开票终端接口文档_V0.0.2.doc  移动即开票终端接口文档_V1.0.10.doc  移动即开票终端接口文档_V1.0.7.doc  移动即开票终端接口文档_V1.0.9.doc  移动即开票终端接口文档_V1.1.0.doc
pilottery/trunkdev/doc/11Reference/: 广东省“刮刮乐”即开票“一站一枪”销售管理模式运营手册.doc
pilottery/trunkdev/possrc/PILotteryBase/: AndroidManifest.xml  release_password_9_6.pub
pilottery/trunkdev/possrc/PIStoreBase/: AndroidManifest.xml  lint.xml
pilottery/trunkdev/release/2015-12-25/: menu_modify.txt
pilottery/trunkdev/release/2016-01-30/: 升级说明.txt
pilottery/trunkdev2.0/db/: gen_prog.bat
pilottery/trunkdev2.0/src/host_src/: CMakeLists.txt
pilottery/trunkdev2.0/src/host_src/3rd/sqlite3/: CMakeLists.txt
pilottery/trunkdev2.0/src/host_src/bqueues/: bqueuesd.h  bqueuesnet.cpp
pilottery/trunkdev2.0/src/host_src/conf/: sysdb.xml
pilottery/trunkdev2.0/src/host_src/framewk/: CMakeLists.txt  hclogit.cpp  hcnetio.cpp  hctimes.cpp  xml.cpp
pilottery/trunkdev2.0/src/host_src/include/: global.h  hcfunc.h  hctype.h  stlinc.h
pilottery/trunkdev2.0/src/host_src/include/common/: gltp_message.h  gltp_message_oms.h  gltp_message_terminal.h  inm_message.h  inm_message_terminal.h  sysdb_inf.h
pilottery/trunkdev2.0/src/host_src/include/framewk/: hclogit.h  hcutils.h  md5.h
pilottery/trunkdev2.0/src/host_src/include/modules/: gl_fbs_inf.h  gl_inf.h
pilottery/trunkdev2.0/src/host_src/modules/: CMakeLists.txt
pilottery/trunkdev2.0/src/host_src/modules/db-module/: otlPool.h
pilottery/trunkdev2.0/src/host_src/modules/gl-module/libs/: CMakeLists.txt  gfp_mod.cpp  gfp_mod.h  gidb_fbs_mod.h  gidb_mod.cpp  gl_plugin_manager.cpp  glmod.cpp  sim_rng.cpp
pilottery/trunkdev2.0/src/host_src/modules/gl-module/plugins/fbs/: CMakeLists.txt  gl_fbs_db.cpp
pilottery/trunkdev2.0/src/host_src/modules/gl-module/plugins/koc11x5/: gl_koc11x5_match.h  gl_koc11x5_plungin.cpp  gl_koc11x5_verify.cpp
pilottery/trunkdev2.0/src/host_src/modules/gl-module/plugins/koc7lx/: gl_koc7lx_db.cpp  gl_koc7lx_match.cpp  gl_koc7lx_prize_calc.h  gl_koc7lx_verify.cpp  gl_koc7lx_verify.h
pilottery/trunkdev2.0/src/host_src/modules/gl-module/plugins/kock3/: CMakeLists.txt  gl_kock3_match.cpp  gl_kock3_match.h  gl_kock3_prize_calc.h
pilottery/trunkdev2.0/src/host_src/modules/gl-module/plugins/koctty/: gl_koctty_betcount.cpp  gl_koctty_db.cpp  gl_koctty_db.h  gl_koctty_rk.h
pilottery/trunkdev2.0/src/host_src/modules/gl-module/plugins/koctty.only_bd/: gl_koctty_betcount.cpp  gl_koctty_db.cpp  gl_koctty_rk.h  gl_koctty_verify.h
pilottery/trunkdev2.0/src/host_src/modules/gl-module/plugins/koctty_old/: gl_koctty_db.cpp  gl_koctty_plungin.cpp  gl_koctty_rk.cpp  gl_koctty_rk.h  gl_koctty_verify.cpp
pilottery/trunkdev2.0/src/host_src/modules/gl-module/plugins/ssc/: gl_ssc_betcount.cpp  gl_ssc_betcount.h  gl_ssc_db.h  gl_ssc_match.h  gl_ssc_prize_calc.h  gl_ssc_rk.cpp
pilottery/trunkdev2.0/src/host_src/modules/gl-module/plugins/tema/: gl_tema_match.h  gl_tema_plugin.cpp  gl_tema_prize_calc.cpp  gl_tema_prize_calc.h  gl_tema_rk.cpp  gl_tema_verify.cpp  gl_tema_verify.h
pilottery/trunkdev2.0/src/host_src/modules/gl-module/rngserver/: 3des.h  protocol.h
pilottery/trunkdev2.0/src/host_src/modules/gl-module/task/: gidb_test.cpp  gl_task_draw.cpp  gl_task_draw_fbs.cpp  gl_task_fbs_issue.cpp
pilottery/trunkdev2.0/src/host_src/modules/ncpc-module/: CMakeLists.txt  ncpc_ap_pay.cpp  ncpc_http_kvdb.h  ncpc_http_message.h  ncpc_http_parse.h  ncpc_message_ncp.cpp  ncpc_net.h  ncpcmod.h
pilottery/trunkdev2.0/src/host_src/modules/tfe-module/: CMakeLists.txt  tfe_task_flush.cpp  tfe_task_retry.cpp  tfemod.cpp
pilottery/trunkdev2.0/src/host_src/modules/tms-module/: CMakeLists.txt
pilottery/trunkdev2.0/src/host_src/sbin/: CMakeLists.txt  bashrc.txt  log_dump.sh  rsync_data.sh  rsyncd.conf  rsyncd.conf.ncp  ts_backup_nsl.sh  ts_servctl.sh  ts_tarbzip_kpw.sh
pilottery/trunkdev2.0/src/host_src/sysdb/: ts_utils.cpp  ts_utils.h
pilottery/trunkdev2.0/src/host_src/tsview/: ts4py.cpp  tsview.cpp  tsview.h  win_gl.cpp  win_gl_issue.cpp  win_gl_rk.cpp  win_help.cpp  win_sysdb.cpp  win_tfe.cpp  win_toolbox.cpp
pilottery/trunkdev2.0/src/host_src/tsview/tsview_web/handler/: websock.py
pilottery/trunkdev2.0/src/host_src/tsview/tsview_web/static/css/: blue.css  style.css
pilottery/trunkdev2.0/src/host_src/tsview/tsview_web/static/js/: facebox.js  gingko.jquery.configuration.js
pilottery/trunkdev2.0/src/host_src/tsview/tsview_web/templates/: charRoom.html  drawcode.html  home.html  index.html  notfound_404.html  q_saleticket.html  winticket.html
pilottery/trunkdev2.0/src/host_src/utility/http_terminal/: bet_k3.txt  httpterm.py  说明.txt
pilottery/trunkdev2.0/src/rng_src/: CMakeLists.txt  INSTALL
pilottery/trunkdev2.0/src/rng_src/card/inc/: fm_cpc_pub.h
pilottery/trunkdev2.0/src/rng_src/conf/: conf.xml.backup
pilottery/trunkdev2.0/src/rng_src/sbin/: CMakeLists.txt
pilottery/trunkdev2.0/src/rng_src/src/: CMakeLists.txt  crc16.cpp  dummy_client.cpp  dummy_server.cpp  log.h  protocol.h  rng_view.cpp  sample.cpp  sample.h
starfishOA/: .classpath  .project
starfishOA/WebContent/WEB-INF/: web.xml
starfishOA/config/: applicationContext.xml  hibernate.cfg.xml  struts.xml
(+3467 files in other folders)
