
PROJECT (TAISHAN_HOST CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_INSTALL_PREFIX /ts_host)
SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_BUILD_TYPE Release)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -W -Wno-deprecated")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -g3 -ggdb3 -rdynamic -std=c++11 -DDEBUG -Wno-deprecated -Wno-literal-suffix -Wno-unused-variable -Wno-write-strings -Wno-delete-non-virtual-dtor -Wno-unused-parameter -Wno-conversion-null -Wno-unused-but-set-variable -Wno-unused-function -Wno-format -Wno-extra")
SET(CMAKE_CXX_FLAGS_RELEASE "-O -g -std=c++11 ")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/libs)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/libs)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/task)

# RPATH and library search setting
SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/libs")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE) 

INCLUDE_DIRECTORIES(
${PROJECT_SOURCE_DIR}/include
${PROJECT_SOURCE_DIR}/include/common
${PROJECT_SOURCE_DIR}/include/framewk
${PROJECT_SOURCE_DIR}/include/modules
${PROJECT_SOURCE_DIR}/modules/ncpc_module
${PROJECT_SOURCE_DIR}/modules/gl-module/libs
${PROJECT_SOURCE_DIR}/3rd/oci
${PROJECT_SOURCE_DIR}/3rd/sqlite3
${CMAKE_INSTALL_PREFIX}/leveldb/include
)

LINK_DIRECTORIES(
${CMAKE_INSTALL_PREFIX}/leveldb/lib
$ENV{ORACLE_HOME}
)

ADD_SUBDIRECTORY(3rd)
ADD_SUBDIRECTORY(framewk)
ADD_SUBDIRECTORY(bqueues)
ADD_SUBDIRECTORY(modules)
ADD_SUBDIRECTORY(sysdb)

ADD_SUBDIRECTORY(conf)
ADD_SUBDIRECTORY(sbin)

ADD_SUBDIRECTORY(tsview)

#ADD_SUBDIRECTORY(z_code)

