
PROJECT(TS_RNG CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_INSTALL_PREFIX /ts_rng)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -W")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -g3 -ggdb3")
SET(CMAKE_CXX_FLAGS_RELEASE "-O -g")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/libs)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/libs)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/task)

# RPATH and library search setting
SET(CMAKE_SKIP_BUILD_RPATH FALSE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/libs")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/card/inc)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/card)

ADD_SUBDIRECTORY(card)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(conf)
ADD_SUBDIRECTORY(sbin)

