
PROJECT (SQLITE3 C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_LIBRARY(sqlite3 SHARED sqlite3.c)
TARGET_LINK_LIBRARIES(sqlite3 rt dl)
#VERSION standfor so version; SOVERSION standfor API version
SET_TARGET_PROPERTIES(sqlite3 PROPERTIES LINKER_LANGUAGE C VERSION 1.0 SOVERSION 0)

ADD_EXECUTABLE(sqlite shell.c)
TARGET_LINK_LIBRARIES(sqlite sqlite3)
SET_TARGET_PROPERTIES(sqlite PROPERTIES LINKER_LANGUAGE C)

INSTALL(TARGETS sqlite3
        RUNTIME DESTINATION task
        LIBRARY DESTINATION libs
        ARCHIVE DESTINATION libs
)
