
FILE(GLOB src_files "*.cpp")

ADD_LIBRARY(gl_FBS SHARED ${src_files} )
TARGET_LINK_LIBRARIES(gl_FBS dl gl frmwk)

#VERSION standfor so version; SOVERSION standfor API version
SET_TARGET_PROPERTIES(gl_KOCTTY PROPERTIES VERSION 1.0 SOVERSION 0)

INSTALL(TARGETS gl_FBS
        RUNTIME DESTINATION task
        LIBRARY DESTINATION libs
        ARCHIVE DESTINATION libs
)